fix images up to trax

--- a/en_US/ircam-hear/_quarto.yml
+++ b/en_US/ircam-hear/_quarto.yml
@@ -24,5 +24,7 @@ book:
 format:
   html:
     theme: cosmo
+    default-image-extension: gif
   pdf:
     documentclass: scrreport
+    default-image-extension: png
