--- a/en_US/alchemist/_quarto.yml
+++ b/en_US/alchemist/_quarto.yml
@@ -33,7 +33,7 @@ book:
 format:
   html:
     theme: cosmo
+    default-image-extension: gif
   pdf:
     documentclass: scrreport
-  epub:
-    css: epub-styles.css
+    default-image-extension: png
