--- a/en_US/bittersweet/_quarto.yml
+++ b/en_US/bittersweet/_quarto.yml
@@ -15,11 +15,10 @@ book:
 
 #[Release Notes](../../flux_processing_release_notes.md)
 
-
 format:
   html:
     theme: cosmo
+    default-image-extension: gif
   pdf:
     documentclass: scrreport
-  epub:
-    css: epub-styles.css
+    default-image-extension: png
