--- a/en_US/epure/_quarto.yml
+++ b/en_US/epure/_quarto.yml
@@ -24,7 +24,7 @@ book:
 format:
   html:
     theme: cosmo
+    default-image-extension: gif
   pdf:
     documentclass: scrreport
-  epub:
-    css: epub-styles.css
+    default-image-extension: png
