--- a/en_US/ircam-trax/_quarto.yml
+++ b/en_US/ircam-trax/_quarto.yml
@@ -38,5 +38,7 @@ book:
 format:
   html:
     theme: cosmo
+    default-image-extension: gif
   pdf:
     documentclass: scrreport
+    default-image-extension: png
