fix all doc images

--- a/en_US/pure-dcompressor/_quarto.yml
+++ b/en_US/pure-dcompressor/_quarto.yml
@@ -25,5 +25,7 @@ book:
 format:
   html:
     theme: cosmo
+    default-image-extension: gif
   pdf:
     documentclass: scrreport
+    default-image-extension: png
