--- a/en_US/stereotool/_quarto.yml
+++ b/en_US/stereotool/_quarto.yml
@@ -19,5 +19,7 @@ book:
 format:
   html:
     theme: cosmo
+    default-image-extension: gif
   pdf:
     documentclass: scrreport
+    default-image-extension: png
