--- a/en_US/pure-limiter/_quarto.yml
+++ b/en_US/pure-limiter/_quarto.yml
@@ -22,5 +22,7 @@ book:
 format:
   html:
     theme: cosmo
+    default-image-extension: gif
   pdf:
     documentclass: scrreport
+    default-image-extension: png
