--- a/en_US/solera/_quarto.yml
+++ b/en_US/solera/_quarto.yml
@@ -26,5 +26,7 @@ book:
 format:
   html:
     theme: cosmo
+    default-image-extension: gif
   pdf:
     documentclass: scrreport
+    default-image-extension: png
