--- a/en_US/evo-in/_quarto.yml
+++ b/en_US/evo-in/_quarto.yml
@@ -1,6 +1,3 @@
-docSection: "Processing"
-docSubsection: ""
-
 project:
   type: book
   output-dir: ../../_build/evo-in ####### <=========== Don't forget to edit path if renaming is needed. YAML don't support concatenation
@@ -16,6 +13,7 @@ book:
     - Module_Settings.qmd
     - Plugin_Settings.qmd
     - Specifications.qmd
+  license: "Copyright Acme, Inc. 2021. All Rights Reserved"
 #[Release Notes](../../flux_processing_release_notes.md)
 
 
@@ -24,5 +22,6 @@ format:
     theme: cosmo
     default-image-extension: gif
   pdf:
-    documentclass: scrreport
+    documentclass: scrreprt
     default-image-extension: png
+    include-in-header: header.tex
