Add footer and release note on every doc.

--- a/en_US/bittersweet-pro/_quarto.yml
+++ b/en_US/bittersweet-pro/_quarto.yml
@@ -1,9 +1,6 @@
-docSection: "Processing"
-docSubsection: ""
-
 project:
   type: book
-  output-dir: ../../_build/bittersweet-pro ####### <=========== Don't forget to edit path if renaming is needed. YAML don't support concatenation
+  output-dir: ../../_build/bittersweet-pro
 
 book:
   title: "Bittersweet Pro"
@@ -19,9 +16,8 @@ book:
     - Preset_Manager.qmd
     #- Measurements.qmd
     - Specification.qmd
-
-#[Release Notes](../../flux_processing_release_notes.md)
-
+  appendices:
+    - ../flux_processing_release_notes.qmd
 
 format:
   html:
@@ -30,3 +26,4 @@ format:
   pdf:
     documentclass: scrreport
     default-image-extension: png
+    include-in-header: ../fluxtemplate.tex
