--- a/en_US/ircam-hear/_quarto.yml
+++ b/en_US/ircam-hear/_quarto.yml
@@ -1,9 +1,6 @@
-docSection: "Immersive"
-docSubsection: ""
-
 project:
   type: book
-  output-dir: ../../_build/ircam-hear ####### <=========== Don't forget to edit path if renaming is needed. YAML don't support concatenation
+  output-dir: ../../_build/ircam-hear
 
 book:
   title: "IRCAM HEar"
@@ -17,9 +14,8 @@ book:
     - Credits.qmd
     - References.qmd
     - Specifications.qmd
-
-#[Release Notes](../../flux_processing_release_notes.md)
-
+  appendices:
+    - ../flux_processing_release_notes.qmd
 
 format:
   html:
@@ -28,3 +24,4 @@ format:
   pdf:
     documentclass: scrreport
     default-image-extension: png
+    include-in-header: ../fluxtemplate.tex
