--- a/en_US/ircam-verb-session/_quarto.yml
+++ b/en_US/ircam-verb-session/_quarto.yml
@@ -1,10 +1,7 @@
-docSection: "Processing"
-docSubsection: ""
-
 project:
   type: book
-  output-dir: ../../_build/ircam-verb-session ####### <=========== Don't forget to edit path if renaming is needed. YAML don't support concatenation
-
+  output-dir: ../../_build/ircam-verb-session
+  
 book:
   title: "IRCAM Verb Session"
   author: "FLUX:: Immersive"
@@ -22,9 +19,8 @@ book:
     - Preset_Management.qmd
     - Credits.qmd
     - Specifications.qmd
-    
-#[Release Notes](../../flux_processing_release_notes.md)
-
+  appendices:
+    - ../flux_processing_release_notes.qmd
 
 format:
   html:
@@ -33,3 +29,4 @@ format:
   pdf:
     documentclass: scrreport
     default-image-extension: png
+    include-in-header: ../fluxtemplate.tex
