--- a/en_US/pure-expander/_quarto.yml
+++ b/en_US/pure-expander/_quarto.yml
@@ -1,9 +1,6 @@
-docSection: "Processing"
-docSubsection: ""
-
 project:
   type: book
-  output-dir: ../../_build/pure-expander ####### <=========== Don't forget to edit path if renaming is needed. YAML don't support concatenation
+  output-dir: ../../_build/pure-expander
 
 book:
   title: "Pure Expander"
@@ -20,9 +17,8 @@ book:
   - Plug-in_Settings.qmd
   - Specifications.qmd
   - Compatibility.qmd
-    
-#[Release Notes](../../flux_processing_release_notes.md)
-
+  appendices:
+    - ../flux_processing_release_notes.qmd
 
 format:
   html:
@@ -31,3 +27,4 @@ format:
   pdf:
     documentclass: scrreport
     default-image-extension: png
+    include-in-header: ../fluxtemplate.tex
