--- a/en_US/pure-limiter/_quarto.yml
+++ b/en_US/pure-limiter/_quarto.yml
@@ -1,10 +1,7 @@
-docSection: "Processing"
-docSubsection: ""
-
 project:
   type: book
-  output-dir: ../../_build/pure-limiter ####### <=========== Don't forget to edit path if renaming is needed. YAML don't support concatenation
-
+  output-dir: ../../_build/pure-limiter
+  
 book:
   title: "Pure Limiter"
   author: "FLUX:: Immersive"
@@ -15,9 +12,8 @@ book:
   - Plug-in_Settings.qmd
   - Specifications.qmd
   - Compatibility.qmd
-    
-#[Release Notes](../../flux_processing_release_notes.md)
-
+  appendices:
+    - ../flux_processing_release_notes.qmd
 
 format:
   html:
@@ -26,3 +22,4 @@ format:
   pdf:
     documentclass: scrreport
     default-image-extension: png
+    include-in-header: ../fluxtemplate.tex
