--- a/en_US/solera/_quarto.yml
+++ b/en_US/solera/_quarto.yml
@@ -1,6 +1,3 @@
-docSection: "Processing"
-docSubsection: ""
-
 project:
   type: book
   output-dir: ../../_build/solera ####### <=========== Don't forget to edit path if renaming is needed. YAML don't support concatenation
@@ -19,9 +16,8 @@ book:
   - The_Side_Chain_EQ_Section.qmd
   - Preset_Management.qmd
   - Specifications.qmd
-    
-#[Release Notes](../../flux_processing_release_notes.md)
-
+  appendices:
+    - ../flux_processing_release_notes.qmd
 
 format:
   html:
@@ -30,3 +26,4 @@ format:
   pdf:
     documentclass: scrreport
     default-image-extension: png
+    include-in-header: ../fluxtemplate.tex
