--- a/en_US/stereotool/_quarto.yml
+++ b/en_US/stereotool/_quarto.yml
@@ -1,6 +1,3 @@
-docSection: "Processing"
-docSubsection: ""
-
 project:
   type: book
   output-dir: ../../_build/stereotool ####### <=========== Don't forget to edit path if renaming is needed. YAML don't support concatenation
@@ -12,9 +9,8 @@ book:
   downloads: [pdf]
   chapters:
   - index.qmd
-    
-#[Release Notes](../../flux_processing_release_notes.md)
-
+  appendices:
+    - ../flux_processing_release_notes.qmd
 
 format:
   html:
@@ -23,3 +19,4 @@ format:
   pdf:
     documentclass: scrreport
     default-image-extension: png
+    include-in-header: ../fluxtemplate.tex
