--- a/en_US/studio-session-plugins/_quarto.yml
+++ b/en_US/studio-session-plugins/_quarto.yml
@@ -1,9 +1,6 @@
-docSection: "Processing"
-docSubsection: ""
-
 project:
   type: book
-  output-dir: ../../_build/studio-session-plugins ####### <=========== Don't forget to edit path if renaming is needed. YAML don't support concatenation
+  output-dir: ../../_build/studio-session-plugins
 
 book:
   title: "Studio Session Plugins"
@@ -12,9 +9,8 @@ book:
   downloads: [pdf]
   chapters:
   - index.qmd
-    
-#[Release Notes](../../flux_processing_release_notes.md)
-
+  appendices:
+    - ../flux_processing_release_notes.qmd
 
 format:
   html:
@@ -23,3 +19,4 @@ format:
   pdf:
     documentclass: scrreport
     default-image-extension: png
+    include-in-header: ../fluxtemplate.tex
