--- a/en_US/alchemist/_quarto.yml
+++ b/en_US/alchemist/_quarto.yml
@@ -1,10 +1,7 @@
-docSection: "Processing"
-docSubsection: ""
-
 project:
   type: book
-  output-dir: ../../_build/alchemist ####### <=========== Don't forget to edit path if renaming is needed. YAML don't support concatenation
-
+  output-dir: ../../_build/alchemist
+  
 book:
   title: "Alchemist"
   author: "FLUX:: Immersive"
@@ -26,6 +23,8 @@ book:
       - Dynamic_Sections_Settings.qmd
       - Dynamic_Sections_Display.qmd
     - part: Specifications.qmd
+  appendices:
+    - ../flux_processing_release_notes.qmd
 
 #[Release Notes](../../flux_processing_release_notes.md)
 
@@ -37,3 +36,4 @@ format:
   pdf:
     documentclass: scrreport
     default-image-extension: png
+    include-in-header: ../fluxtemplate.tex
