--- a/en_US/elixir/_quarto.yml
+++ b/en_US/elixir/_quarto.yml
@@ -1,9 +1,6 @@
-docSection: "Processing"
-docSubsection: ""
-
 project:
   type: book
-  output-dir: ../../_build/elixir ####### <=========== Don't forget to edit path if renaming is needed. YAML don't support concatenation
+  output-dir: ../../_build/elixir
 
 book:
   title: "Elixir"
@@ -18,9 +15,8 @@ book:
     - User_interface.qmd
     - Preferences.qmd
     - Specifications.qmd
-    #- Measurements.qmd
-
-#[Release Notes](../../flux_processing_release_notes.md)
+  appendices:
+    - ../flux_processing_release_notes.qmd
 
 
 format:
@@ -30,3 +26,4 @@ format:
   pdf:
     documentclass: scrreport
     default-image-extension: png
+    include-in-header: ../fluxtemplate.tex
