--- a/en_US/epure/_quarto.yml
+++ b/en_US/epure/_quarto.yml
@@ -1,10 +1,7 @@
-docSection: "Processing"
-docSubsection: ""
-
 project:
   type: book
-  output-dir: ../../_build/epure ####### <=========== Don't forget to edit path if renaming is needed. YAML don't support concatenation
-
+  output-dir: ../../_build/epure
+  
 book:
   title: "Epure"
   author: "FLUX:: Immersive"
@@ -16,9 +13,8 @@ book:
     - Setup_-_Input_Routing_-_MS_Encode_Decode_-_Groups.qmd
     - Specifications.qmd
     - Compatibility.qmd
-    #- Measurements.qmd
-
-#[Release Notes](../../flux_processing_release_notes.md)
+  appendices:
+    - ../flux_processing_release_notes.qmd
 
 
 format:
@@ -28,3 +24,4 @@ format:
   pdf:
     documentclass: scrreport
     default-image-extension: png
+    include-in-header: ../fluxtemplate.tex
