--- a/en_US/evo-channel/_quarto.yml
+++ b/en_US/evo-channel/_quarto.yml
@@ -1,9 +1,6 @@
-docSection: "Processing"
-docSubsection: ""
-
 project:
   type: book
-  output-dir: ../../_build/evo-channel ####### <=========== Don't forget to edit path if renaming is needed. YAML don't support concatenation
+  output-dir: ../../_build/evo-channel
 
 book:
   title: "Evo Channel"
@@ -20,11 +17,14 @@ book:
     - Preset_Management.qmd
     - Preset_Manager.qmd
     - Specifications.qmd
+  appendices:
+    - ../flux_processing_release_notes.qmd
 
 format:
   html:
     theme: cosmo
+    default-image-extension: gif
   pdf:
     documentclass: scrreport
-  epub:
-    cover-image: cover.png
+    default-image-extension: png
+    include-in-header: ../fluxtemplate.tex
