--- a/en_US/evo-comp/_quarto.yml
+++ b/en_US/evo-comp/_quarto.yml
@@ -1,10 +1,7 @@
-docSection: "Processing"
-docSubsection: ""
-
 project:
   type: book
-  output-dir: ../../_build/evo-comp ####### <=========== Don't forget to edit path if renaming is needed. YAML don't support concatenation
-
+  output-dir: ../../_build/evo-comp
+  
 book:
   title: "Evo Compressor"
   author: "FLUX:: Immersive"
@@ -20,7 +17,8 @@ book:
     - Preset_Management.qmd
     - Preset_Manager.qmd
     - Specifications.qmd
-#[Release Notes](../../flux_processing_release_notes.md)
+  appendices:
+    - ../flux_processing_release_notes.qmd
 
 
 format:
@@ -30,3 +28,4 @@ format:
   pdf:
     documentclass: scrreport
     default-image-extension: png
+    include-in-header: ../fluxtemplate.tex
