--- a/en_US/pure-dcompressor/_quarto.yml
+++ b/en_US/pure-dcompressor/_quarto.yml
@@ -1,9 +1,6 @@
-docSection: "Processing"
-docSubsection: ""
-
 project:
   type: book
-  output-dir: ../../_build/pure-dcompressor ####### <=========== Don't forget to edit path if renaming is needed. YAML don't support concatenation
+  output-dir: ../../_build/pure-dcompressor
 
 book:
   title: "Pure DCompressor"
@@ -18,9 +15,8 @@ book:
   - Display.qmd
   - Preset_Management.qmd
   - Specifications.qmd
-    
-#[Release Notes](../../flux_processing_release_notes.md)
-
+  appendices:
+    - ../flux_processing_release_notes.qmd
 
 format:
   html:
@@ -29,3 +25,4 @@ format:
   pdf:
     documentclass: scrreport
     default-image-extension: png
+    include-in-header: ../fluxtemplate.tex
