--- a/en_US/studio-session-analyser/_quarto.yml
+++ b/en_US/studio-session-analyser/_quarto.yml
@@ -1,10 +1,7 @@
-docSection: "Analysis"
-docSubsection: ""
-
 project:
   type: book
-  output-dir: ../../_build/studio-session-analyser ####### <=========== Don't forget to edit path if renaming is needed. YAML don't support concatenation
-
+  output-dir: ../../_build/studio-session-analyser
+  
 book:
   title: "Studio Session Analyser"
   author: "FLUX:: Immersive"
@@ -12,9 +9,8 @@ book:
   downloads: [pdf]
   chapters:
   - index.qmd
-    
-#[Release Notes](../../flux_processing_release_notes.md)
-
+  appendices:
+    - ../flux_processing_release_notes.qmd
 
 format:
   html:
@@ -23,3 +19,4 @@ format:
   pdf:
     documentclass: scrreport
     default-image-extension: png
+    include-in-header: ../fluxtemplate.tex
