--- a/en_US/syrah/_quarto.yml
+++ b/en_US/syrah/_quarto.yml
@@ -1,6 +1,3 @@
-docSection: "Processing"
-docSubsection: ""
-
 project:
   type: book
   output-dir: ../../_build/syrah ####### <=========== Don't forget to edit path if renaming is needed. YAML don't support concatenation
@@ -22,10 +19,9 @@ book:
   - Plug-in_Settings.qmd
   - Get_started.qmd
   - Specifications.qmd
+  appendices:
+    - ../flux_processing_release_notes.qmd
     
-#[Release Notes](../../flux_processing_release_notes.md)
-
-
 format:
   html:
     theme: cosmo
@@ -33,3 +29,4 @@ format:
   pdf:
     documentclass: scrreport
     default-image-extension: png
+    include-in-header: ../fluxtemplate.tex
